# UR_daVinci_robot

./: README.md  mops-public.repos  mops-sdu.repos  mops.repos
eua_control/: 52-ftdi.rules  CMakeLists.txt  calibrate_data.txt  coupling.ipynb  coupling.py  package.xml  setup.cfg  setup.py
eua_control/config/: calibration.json  large_needle_driver_420006.yaml
eua_control/doc/: jointcoupling.ipynb
eua_control/dynamixel/: README.md  __init__.py  conversions.py  device.py  dynamixel.py
eua_control/eua_control/: __init__.py  align_servos.py  center_servos.py  controller.py  joint_gui.py
eua_control/launch/: eua-control-sim.launch  eua-control.launch  eua1_sim.launch  eua_calibrate.launch  eua_control.launch  launch_eua_control.py
eua_control/scripts/: calibrate  center_servos  controller  eua1_controller_sim  old_calib  test  zero_servos
eua_control/src/dynamixel/: conversions.py  device.py  dynamixel.py  packet.py  param.py
eua_control/src/eua_control/: __init__.py  joint_trajectory_controller.py
eua_control/srv/: SetCalibrationOffset.srv  SetTrajectoryLimits.srv
mops_bringup/: CMakeLists.txt  package.xml
mops_bringup/config/: ur-2017356413.yaml  ur-20185500393.yaml  ur-20225502173.yaml
mops_bringup/launch/: mops_ur5.launch.py  mops_ur5_fd.launch.py  mops_visualize.launch.py  move_to_pose.xml  move_to_pose_2.xml  move_to_pose_3.xml  move_to_pose_4.xml  move_to_pose_5.xml  sim_teleop.launch.py  teleop.launch  teleop.launch.py  teleop_sdu.launch.py  test_docker.launch.py
mops_common/: CMakeLists.txt  package.xml
mops_common/include/: linalg.hpp  mathutility.hpp
mops_common/include/conversions/: eigen.hpp  kdl.hpp
mops_control/: CMakeLists.txt  package.xml
mops_control/src/: mops_control.cpp
mops_description/: CMakeLists.txt  package.xml
mops_description/config/: ur5_eua1_lnd420006_1.yaml
mops_description/doc/: lnd-frames.xopp
mops_description/urdf/: dv_tools.urdf.xacro  eua.urdf.xacro  lnd.urdf.xacro  mops.urdf.xacro  mops_sdu.urdf.xacro  mops_sdu_ur5.urdf.xacro  ur.urdf  wget-log
mops_description/urdf/tool/: dv_large_needle_driver.urdf.xacro  materials.urdf.xacro
mops_msgs/: CMakeLists.txt  package.xml
mops_msgs/msg/: ToolEndEffectorState.msg  ToolEndEffectorStateStamped.msg
mops_state_publisher/: CMakeLists.txt  package.xml
mops_state_publisher/src/: mops_state_publisher.cpp
mops_state_publisher_moveit/: CMakeLists.txt  README.md  package.xml
mops_state_publisher_moveit/src/: mops_remapper.cpp
mops_teleop/: CMakeLists.txt  package.xml
mops_teleop/src/: footcontrol.cpp  teleop.cpp  teleop_fd.cpp
ursurg_bringup/: CMakeLists.txt  package.xml
ursurg_bringup/launch/: both_robots.launch  both_robots_sim.launch  haptics.launch  hid-haptic-devices.launch  hid.launch  lab-teleop.launch  lab.launch  load_model.launch  sim-a-teleop.launch  sim-one-teleop.launch  sim-one.launch  sim-teleop.launch  sim_teleop.launch  state_publisher.launch  teleop-aux.launch  teleop-control.launch  teleop.launch  test.launch  ur5_bringup.launch  ur_common.launch  ursurg-control.launch  ursurg-load-model.launch  ursurg-state-publisher.launch  ursurg_control.launch  ursurg_haptics.launch  ursurg_state_publisher.launch  ursurg_teleop.launch  vision_pipeline.launch
ursurg_bringup/launch/sim/: all-teleop.launch  sim-teleop.launch  sim_all_teleop.launch  sim_external_control.launch
ursurg_common/: CMakeLists.txt  package.xml  setup.py
ursurg_common/cmake/: cmake_modules-extras.cmake.develspace.in  cmake_modules-extras.cmake.installspace.in
ursurg_common/include/ursurg_common/: blockingqueue.h  linalg.h  math.h  pair.h  realtime.h  rosutility.h  synchronized.h  typename.h
ursurg_common/include/ursurg_common/conversions/: conversions.h  eigen.h  kdl.h  robwork.h
ursurg_common/include/ursurg_common/rosutility/: callback.h  subscription.h  task.h
ursurg_common/src/ursurg_common/: __init__.py  fit_plane.py  pose.py  rotations.py  umeyama.py
ursurg_control/: CMakeLists.txt  package.xml  setup.py
ursurg_control/scripts/: set_rcm
ursurg_control/src/: WeightedJacobianIKSolver.cpp  WeightedJacobianIKSolver.hpp  ursurg_control.cpp  ursurg_control_rcm.cpp
ursurg_description/: CMakeLists.txt  package.xml
ursurg_description/config/: ur-2017356413.yaml  ur-20185500393.yaml  ur5_eua1_lnd420006_1.yaml  ur5e_eua2_lnd470006_1.yaml  world_calib.yaml
ursurg_description/doc/: gen_joints_urdf.py
ursurg_description/launch/: test.launch  test_lnd.launch
ursurg_description/urdf/: eua.urdf.xacro  lnd.urdf.xacro  lnd_test.urdf.xacro  ursurg.urdf.xacro
ursurg_msgs/: CMakeLists.txt  package.xml
ursurg_msgs/msg/: PoseGraspStamped.msg  ToolEndEffectorState.msg  ToolEndEffectorStateStamped.msg
ursurg_msgs/srv/: SetRCM.srv
ursurg_state_publisher/: CMakeLists.txt  package.xml
ursurg_state_publisher/src/: devicekinematics.cpp  devicekinematics.h  inv_kin_node.cpp  ursurg_state_publisher_node.cpp  workcellcontainer.cpp  workcellcontainer.h
ursurg_state_publisher/workcell/: CollisionSetup.xml  ROSOR_2x_UR_platform.wc.xml
ursurg_state_publisher/workcell/UR5_right_calibrated/: DHParam_calibrated.xml  UR5_Right.xml
ursurg_state_publisher/workcell/UR5e_left_calibrated/: DHParam_calibrated.xml  PosRPYParam.xml  ProximitySetup.xml  UR5e_Left.xml  rwsettings.xml
ursurg_teleop/: CMakeLists.txt  package.xml
ursurg_teleop/cmake/Modules/: FindGeomagic.cmake
ursurg_teleop/launch/: teleop.launch
ursurg_teleop/src/: common.h  footcontrol.cpp  footpedal.cpp  gui.cpp  gui.h  haptics.cpp  haptics.h  hd++.cpp  hd++.h  node.cpp  robot.cpp  robot.h  teleop.cpp  ur_teleop.cpp  ursurg_teleop.cpp
ursurg_teleop/src/footcontrol/: footcontrol.cpp  footcontrolwidget.cpp  footcontrolwidget.h
ursurg_teleop/src/teleop/: teleop.cpp
