<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mops_bringup</name>
  <version>0.1.0</version>
  <description>Launch configurations for the MOPS surgical robot platform.</description>
  <maintainer email="kils@mmmi.sdu.dk">Kim Lindberg Schwaner</maintainer>
  <license>BSD</license>
  <!-- <url type="website"></url> -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>teleop_trigger</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
