<?xml version="1.0"?>
<package format="3">
  <name>mops_common</name>
  <version>0.1.0</version>
  <description>The mops_common package.</description>
  <maintainer email="kils@mmmi.sdu.dk">Kim Lindberg Schwaner</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
