<?xml version="1.0"?>
<package format="3">
  <name>mops_state_publisher</name>
  <version>0.1.0</version>
  <description>A customized version of robot_state_publisher.</description>
  <author email="isucan@gmail.com">Ioan Sucan</author>
  <author email="jacquelinekay1@gmail.com">Jackie Kay</author>
  <author email="wim@willowgarage.com">Wim Meeussen</author>
  <maintainer email="kils@mmmi.sdu.dk">Kim Lindberg Schwaner</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>mops_msgs</depend>
  <build_depend>liborocos-kdl-dev</build_depend>
  <build_export_depend>liborocos-kdl-dev</build_export_depend>
  <exec_depend>liborocos-kdl</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
