<?xml version="1.0"?>
<package format="2">
    <name>ursurg_bringup</name>
    <version>0.1.0</version>
    <description>Launch configurations for the UR surgical robot platform</description>
    <maintainer email="kils@mmmi.sdu.dk">Kim Lindberg Schwaner</maintainer>
    <license>BSD</license>
    <!-- <url type="website"></url> -->

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>
</package>
