<?xml version="1.0"?>
<package format="2">
  <name>ursurg_common</name>
  <version>0.1.0</version>
  <description>The ursurg_common package</description>
  <maintainer email="kils@mmmi.sdu.dk">Kim Lindberg Schwaner</maintainer>
  <license>BSD</license>
  <!-- <url type="website"></url> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <doc_depend>doxygen</doc_depend>
</package>
