<?xml version="1.0"?>
<package format="2">
  <name>ursurg_control</name>
  <version>0.1.0</version>
  <description>The ursurg_control package</description>
  <maintainer email="micsc@mmmi.sdu.dk">Michael K. Schmidt</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>ursurg_common</depend>
  <exec_depend>ursurg_rw_models</exec_depend>
</package>

