<?xml version="1.0"?>
<package format="2">
    <name>ursurg_msgs</name>
    <version>0.1.0</version>
    <description>Yhe ursurg_msgs package</description>
    <maintainer email="kils@mmmi.sdu.dk">Kim Lindberg Schwaner</maintainer>
    <license>BSD</license>
    <!-- <url type="website"></url> -->

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <build_export_depend>message_runtime</build_export_depend>
    <exec_depend>message_runtime</exec_depend>

xcz    <!-- <depend>std_msgs</depend> -->
</package>
