<?xml version="1.0"?>
<package format="2">
  <name>ursurg_state_publisher</name>
  <version>0.1.0</version>
  <description>The ursurg_state_publisher package</description>
  <maintainer email="micsc@mmmi.sdu.dk">Michael K. Schmidt</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

</package>
