<package format="2">
  <name>ursurg_state_publisher</name>
  <version>0.1.0</version>
  <description>A customized version of robot_state_publisher</description>
  <author email="isucan@gmail.com">Ioan Sucan</author>
  <author email="jacquelinekay1@gmail.com">Jackie Kay</author>
  <author email="wim@willowgarage.com">Wim Meeussen</author>
  <maintainer email="kils@mmmi.sdu.dk">Kim Lindberg Schwaner</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>kdl_parser</depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>rostime</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_kdl</depend>
  <depend>ursurg_common</depend>
  <depend>ursurg_msgs</depend>

  <build_depend>liborocos-kdl-dev</build_depend>
  <build_depend>liburdfdom-headers-dev</build_depend>

  <build_export_depend>liborocos-kdl-dev</build_export_depend>

  <exec_depend>liborocos-kdl</exec_depend>
</package>
